# VerySickTissueMaker

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  main.cpp
BEEditor/: CMakeLists.txt
BEEditor/Resources/Shaders/: default_vertex_shader.glsl  quad_fragment_shader.glsl  quad_vertex_shader.glsl
BEEditor/src/: EditorApplication.cpp  EditorFonts.cpp  EditorFonts.h  EditorSceneObject.cpp  EditorSceneObject.h  EditorViewportWindow.cpp  EditorViewportWindow.h  NotificationManager.cpp  NotificationManager.h  SceneObjectHolder.cpp  SceneObjectHolder.h  Tags.h  UtilWidgets.cpp  UtilWidgets.h  main.cpp
BEEditor/src/EditorMainUIElements/: EditorMainAssetsPannel.cpp  EditorMainAssetsPannel.h  EditorMainCreationPannel.cpp  EditorMainCreationPannel.h  EditorMainSceneViewPannel.cpp  EditorMainSceneViewPannel.h  EditorMainTitleBar.cpp  EditorMainTitleBar.h  EditorMainUIElements.h  EditorMainViewportWindow.cpp  EditorMainViewportWindow.h
BadEngineCore/: CMakeLists.txt
BadEngineCore/Resources/Models/: Ukulele.fbx
BadEngineCore/Resources/Textures/: Ukulele_01_metallic_4k.exr
BadEngineCore/docs/: Doxyfile
BadEngineCore/docs/html/: _application_8h_source.html  _b_e_im_gui_viewport_8h_source.html  _behaviour_manager_8h_source.html  _behavioural_scene_object_8h_source.html  _camera_8h_source.html  _e_c_s_8h_source.html  _entry_point_8h_source.html  _error_8h_source.html  _frame_buffer_8h_source.html  _glfw_error_8h_source.html  _graphics_8h_source.html  _im_gui_dark_theme_8h_source.html  _index_buffer_8h_source.html  _keyboard_8h_source.html  _logger_8h_source.html  _main_platform_window_renderer_8h_source.html  _material_8h_source.html  _mesh_8h_source.html  _mesh_renderer_8h_source.html  _mesh_renderer_system_8h_source.html  _message_box_8h_source.html  _model_loader_8h_source.html  _mouse_8h_source.html  _opengl_error_8h_source.html  _our_im_gui_8h_source.html  _point_light_8h_source.html  _quad_8h_source.html  _render_buffer_8h_source.html  _renderer_8h_source.html  _resource_path_handler_8h_source.html  _scene_container_8h_source.html  _scene_object_8h_source.html  _shaders_8h_source.html  _texture_8h_source.html  _timer_8h_source.html  _transform_8h_source.html  _vector_8h_source.html  _vertex_array_8h_source.html  _vertex_buffer_8h_source.html  _window_8h_source.html  (+126 more)
BadEngineCore/docs/latex/: _application_8h_source.tex  _b_e_im_gui_viewport_8h_source.tex  _behaviour_manager_8h_source.tex  _behavioural_scene_object_8h_source.tex  _camera_8h_source.tex  _e_c_s_8h_source.tex  _entry_point_8h_source.tex  _error_8h_source.tex  _frame_buffer_8h_source.tex  _glfw_error_8h_source.tex  _graphics_8h_source.tex  _im_gui_dark_theme_8h_source.tex  _index_buffer_8h_source.tex  _keyboard_8h_source.tex  _logger_8h_source.tex  _main_platform_window_renderer_8h_source.tex  _material_8h_source.tex  _mesh_8h_source.tex  _mesh_renderer_8h_source.tex  _mesh_renderer_system_8h_source.tex  _message_box_8h_source.tex  _model_loader_8h_source.tex  _mouse_8h_source.tex  _opengl_error_8h_source.tex  _our_im_gui_8h_source.tex  _point_light_8h_source.tex  _quad_8h_source.tex  _render_buffer_8h_source.tex  _renderer_8h_source.tex  _resource_path_handler_8h_source.tex  _scene_container_8h_source.tex  _scene_object_8h_source.tex  _shaders_8h_source.tex  _texture_8h_source.tex  _timer_8h_source.tex  _transform_8h_source.tex  _vector_8h_source.tex  _vertex_array_8h_source.tex  _vertex_buffer_8h_source.tex  _window_8h_source.tex  (+92 more)
BadEngineCore/include/BECore/: BECore.h
BadEngineCore/src/: pch.h
BadEngineCore/src/Diagnostics/: Error.cpp  Error.h  GlfwError.cpp  GlfwError.h  Logger.cpp  Logger.h  MessageBox.h  OpenglError.cpp  OpenglError.h
BadEngineCore/src/ECS/: ApplicationContainerProvider.cpp  ApplicationContainerProvider.h  BehaviourManager.h  BehaviouralSceneObject.cpp  BehaviouralSceneObject.h  ECS.cpp  ECS.h  Object.h  SceneContainer.cpp  SceneContainer.h  SceneObject.h
BadEngineCore/src/ECSSystems/: MeshRendererSystem.cpp  MeshRendererSystem.h
BadEngineCore/src/Input/: Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h
BadEngineCore/src/Main/: Application.cpp  Application.h  EntryPoint.h
BadEngineCore/src/Renderer/: Camera.h  Graphics.h  MainPlatformWindowRenderer.cpp  MainPlatformWindowRenderer.h  Material.cpp  Mesh.cpp  Mesh.h  MeshComponent.h  MeshRenderer.cpp  MeshRenderer.h  PointLight.cpp  PointLight.h  Quad.cpp  Quad.h  Renderer.cpp  Renderer.h  Shaders.cpp  Shaders.h  Texture.cpp  Texture.h  Transform.h  Vector.h
BadEngineCore/src/ResourceLoader/: ModelLoader.cpp  ModelLoader.h  ResourcePathHandler.cpp  ResourcePathHandler.h  TextureManager.cpp  TextureManager.h
BadEngineCore/src/Timer/: Timer.h
BadEngineCore/src/Window/: MainPlatformWindow.cpp  MainPlatformWindow.h  Window.cpp  Window.h
vstm/: CMakeLists.txt
vstm/src/: main.cpp
vstmr/: CMakeLists.txt
vstmr/assets/models/: dragon.mtl
vstmr/assets/shaders/: default_fragment_shader.glsl  default_vertex_shader.glsl  fragment_shader.shader  main_fragment_shader.glsl  main_vertex_shader.glsl  quad_fragment_shader.glsl  quad_vertex_shader.glsl
vstmr/include/vstmr/: vstmr.h
vstmr/src/: pch.h
vstmr/src/ECS/: Behaviour.cpp  Behaviour.h  BehaviourManager.cpp  BehaviourManager.h  BehaviouralSceneObject.cpp  BehaviouralSceneObject.h  Component.h  ECS.cpp  ECS.h  RootSceneContainer.cpp  RootSceneContainer.h  SceneContainer.cpp  SceneContainer.h  SceneObject.cpp  SceneObject.h
vstmr/src/ECSSystems/: MeshRendererSystem.cpp  MeshRendererSystem.h
vstmr/src/Main/: Application.cpp  Application.h  EntryPoint.h
vstmr/src/ResourceLoader/: MeshLoader.cpp  MeshLoader.h  ModelLoader.cpp  ModelLoader.h
vstmr/src/componentProcessors/: BehaviourProcessor.cpp  BehaviourProcessor.h  MeshRendererProcessor.cpp  MeshRendererProcessor.h
vstmr/src/diagnostics/: Assert.h  Error.cpp  Error.h  GlfwError.cpp  GlfwError.h  Logger.cpp  Logger.h  MessageBox.cpp  MessageBox.h  OpenglError.cpp  OpenglError.h
vstmr/src/input/: Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h
vstmr/src/renderer/: BufferSetStore.cpp  (+34 more)
(+155 files in other folders)
